--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .btn-primary {
+        @apply inline-flex items-center bg-teal-600 hover:bg-teal-500 text-white leading-6 font-semibold border border-transparent rounded-md focus:ring-2 focus:ring-offset-2 focus:ring-offset-white focus:ring-teal-600 focus:outline-none transition-colors duration-200;
+    }
+    .btn-secondary {
+        @apply inline-flex items-center bg-white hover:bg-teal-600 text-teal-600 hover:text-white leading-6 font-medium border-2 border-gray-200 hover:border-teal-600 rounded-lg focus:outline-none transition-colors duration-200;
+    }
+
+    .input-primary {
+        @apply appearance-none w-full px-3 py-2 text-gray-700 border-0 rounded ring-2 ring-gray-300 ring-opacity-50 tracking-wider focus:outline-none focus:ring-teal-600 placeholder-gray-600 placeholder-opacity-90;
+    }
+
+   
+}
